stats also moved

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -75,13 +75,13 @@
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/">Home</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#buttons">Attendance</a></li>
+                            href="/attendance">Attendance</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#stats">Stats</a></li>
+                            href="/stats">Stats</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#">Todo</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#">About us</a></li>
+                            href="/todo">Todo</a></li>
+                    <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="#">About us</a></li> -->
                     {% if ausername %}
                     <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
                         class="flex text-sm bg-gray-400 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
