bug fixing and logo updated favicon added

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,6 +40,9 @@
                 {% if msg %}
                 <p class="text-red-500 text-sm mb-3">{{ msg }}</p>
                 {% endif %}
+                {% if msg1 %}
+                <p class="text-blue-500 text-sm mb-3">{{ msg1 }}</p>
+                {% endif %}
                 <div>
                     <label class="block mb-2 text-blue-500" for="username">Username</label>
                     <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
