--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -63,15 +63,15 @@
                 <li></li>
             </ul>
         </div>
-        <div class="border-2 border-t-0 w-full m-auto flex border-indigo-800 bg-white">
+        <div class="border-2 border-t-0 w-full m-auto flex border-indigo-800 bg-white py-3 px-10">
             <div class="lg:hidden px-2 flex w-1/3">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <div class="flex w-1/3 lg:items-center lg:justify-center">
-                <img class="lg:h-2/3 h-5" src="static\images\web-logo1.png" alt="">
+            <div class="flex  lg:items-center lg:justify-start">
+                <img class="w-[65%]" src="static\images\web-logo1.png" alt="">
             </div>
-            <div class="p-6 w-full lg:flex hidden justify-end items-center">
-                <ul class="flex gap-20 font-bold items-center">
+            <div class=" w-full lg:flex hidden justify-end items-center">
+                <ul class="flex gap-12 font-bold items-center">
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/">Home</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
@@ -81,7 +81,7 @@
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/todo">Todo</a></li>
                     <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="#">About us</a></li> -->
+                            href="">About us</a></li> -->
                     {% if ausername %}
                     <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
                         class="flex text-sm bg-gray-400 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
@@ -91,9 +91,9 @@
                         <img src="{{ url_for('static', filename='images/profile_uploads/' + profile_photo) }}"
                             class="rounded-full h-12 w-12 object-cover" alt="Profile Photo" id="profilePhotoPreview">
                         {% else %}
-                        <div class="w-12 h-12 rounded-full profile-placeholder flex justify-center"
+                        <div class="w-10 h-10 rounded-full profile-placeholder flex justify-center items-center"
                             id="profilePhotoPlaceholder">
-                            <p class="mt-3">{{ username[0] }}</p>
+                            <p class="mb-1 capitalize text-2xl">{{ username[0] }}</p>
                         </div>
                         <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover"
                             style="display: none;">
@@ -101,7 +101,7 @@
                     </button>
                     <!-- Dropdown menu -->
                     <div id="dropdownAvatar"
-                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                        class="z-10 hidden  divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                         <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
                             <div>{{ausername}}</div>
                             <div class="font-medium truncate">{{email}}</div>
