--- a/templates/profile.html
+++ b/templates/profile.html
@@ -61,8 +61,8 @@
                     {% if profile_photo %}
                         <img src="{{ url_for('static', filename='images/profile_uploads/' + profile_photo) }}" class="rounded-full h-48 w-48 object-cover" alt="Profile Photo" id="profilePhotoPreview">
                     {% else %}
-                        <div class="rounded-full h-48 w-48 profile-placeholder" id="profilePhotoPlaceholder">{{ username[0] }}</div>
-                        <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover" style="display: none;">
+                        <div class="rounded-full h-48 w-48 profile-placeholder" id="profilePhotoPlaceholder"><p class="capitalize text-[100px] text-white">{{ username[0] }}</p></div>
+                        <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover" style="display: none;"> 
                     {% endif %}
                     <label for="profile_photo" class="cursor-pointer">
                         <i class="fa-solid fa-pen-to-square"></i>
