--- a/templates/store1.html
+++ b/templates/store1.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/apexcharts/dist/apexcharts.min.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon"  href="static/images/web-logo3-fav.png">
     <style>
         .radio-red:checked {
             background-color: red;
@@ -42,7 +41,7 @@
 </head>
 
 <body class="bg-[#1f27bf]">
-    <div class="area h-screen">
+    <div class="area h-[390%]">
         <ul class="circles h-full">
             <li></li>
             <li></li>
@@ -65,15 +64,15 @@
         </ul>
     </div>
     <section id="home my-12">
-        <div class="border-2 border-t-0 w-full m-auto flex border-indigo-800 bg-white py-3 px-10">
+        <div class="border-2 border-t-0 w-full m-auto flex border-indigo-800 bg-white">
             <div class="lg:hidden px-2 flex w-1/3">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <div class="flex  lg:items-center lg:justify-start">
-                <img class="w-[70%] " src="static\images\web-logo3.png" alt="">
+            <div class="flex w-1/3 lg:items-center lg:justify-center">
+                <img class="lg:h-2/3 h-5" src="static\images\web-logo1.png" alt="">
             </div>
-            <div class=" w-full lg:flex hidden justify-end items-center">
-                <ul class="flex gap-12 font-bold items-center">
+            <div class="p-6 w-full lg:flex hidden justify-end items-center">
+                <ul class="flex gap-20 font-bold items-center">
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/">Home</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
@@ -93,9 +92,9 @@
                         <img src="{{ url_for('static', filename='images/profile_uploads/' + profile_photo) }}"
                             class="rounded-full h-12 w-12 object-cover" alt="Profile Photo" id="profilePhotoPreview">
                         {% else %}
-                        <div class="w-10 h-10 rounded-full profile-placeholder flex justify-center items-center"
+                        <div class="w-12 h-12 rounded-full profile-placeholder flex justify-center"
                             id="profilePhotoPlaceholder">
-                            <p class="mb-1 text-white capitalize text-2xl">{{ username[0] }}</p>
+                            <p class="mt-3">{{ username[0] }}</p>
                         </div>
                         <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover"
                             style="display: none;">
@@ -103,7 +102,7 @@
                     </button>
                     <!-- Dropdown menu -->
                     <div id="dropdownAvatar"
-                        class="z-10 hidden  divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                         <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
                             <div>{{ausername}}</div>
                             <div class="font-medium truncate">{{email}}</div>
@@ -125,29 +124,28 @@
             </div>
         </div>
 
-        <div class="flex flex-col m-auto rounded-xl text-center  w-[70%]  my-14">
-            <!-- <div class="bg-gradient-to-r from-gray-600 to-white text-transparent bg-clip-text"> -->
-            <div class="text-white text-transparent bg-clip-text">
+        <div class="flex flex-col m-auto rounded-xl text-center  w-[70%] bg-white my-14">
+            <div class="bg-gradient-to-r from-purple-600 via-purple-500 to-indigo-800 text-transparent bg-clip-text">
                 <h1 class="h-full lg:text-6xl text-5xl py-4">{{greeting}}</h1>
             </div>
             <div class="">
-                <h4 class="lg:text-4xl  text-white text-3xl border-b-2 pb-10">@{{username}}</h4>
+                <h4 class="lg:text-4xl italic text-gray-900 text-3xl border-b-2 pb-10">@{{username}}</h4>
             </div>
             <div>
-                <h4 class="text-2xl pt-10  text-white">IT-4C</h4>
+                <h4 class="text-2xl pt-10 ">IT-4C</h4>
             </div>
             {% if current_lecture %}
             <div>
                 <p class="text-base text-gray-400 pt-1">Current lecture:</p>
             </div>
             <div>
-                <h1 class="text-6xl pt-1 text-white">{{current_lecture}}</h1>
+                <h1 class="text-6xl pt-1">{{current_lecture}}</h1>
             </div>
             <div>
-                <h2 class="text-4xl pt-2 text-white">{{current_class}}</h2>
+                <h2 class="text-4xl pt-2">{{current_class}}</h2>
             </div>
             <div>
-                <h3 class="text-xl pt-2 pb-10 text-white">{{timing}}</h3>
+                <h3 class="text-xl pt-2 pb-10">{{timing}}</h3>
             </div>
             {% else %}
             <div>
@@ -165,8 +163,8 @@
             {% endif %}
         </div>
     </section>
-    <footer id="footer" class="fixed bottom-0 w-full">
-        <div class="w-full bg-white text-center text-xl py-3">Made by Meet Oza</div>
+    <footer id="footer">
+        <div class="w-full bg-white text-center text-2xl py-3">Made by Meet Oza</div>
     </footer>
      
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
