--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,8 +28,13 @@
                 if (placeholder) {
                     placeholder.style.display = 'none';
                 }
+                document.getElementById('submitButton').style.display = 'block';
             }
             reader.readAsDataURL(event.target.files[0]);
+        }
+
+        function showSubmitButton() {
+            document.getElementById('submitButton').style.display = 'block';
         }
     </script>
 </head>
@@ -78,30 +83,30 @@
                         </div>
                         <div>
                             <label class="block mb-2 text-blue-500" for="f_name">First Name</label>
-                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="f_name" value="{{ f_name }}">
+                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="f_name" value="{{ f_name }}" onchange="showSubmitButton()">
                         </div>
                         <div>
                             <label class="block mb-2 text-blue-500" for="l_name">Last Name</label>
-                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="l_name" value="{{ l_name }}">
+                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="text" name="l_name" value="{{ l_name }}" onchange="showSubmitButton()">
                         </div>
                     </div>
                     <div class="w-1/2">
                         <div>
                             <label class="block mb-2 text-blue-500" for="current_password">Current Password</label>
-                                <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" value="{{ current_password }}" name="current_password">
+                                <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" value="{{ current_password }}" name="current_password" onchange="showSubmitButton()">
                         </div>
                         <div>
                             <label class="block mb-2 text-blue-500" for="new_password">New Password</label>
-                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="new_password" value="{{ new_password }}">
+                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="new_password" value="{{ new_password }}" onchange="showSubmitButton()">
                         </div>
                         <div>
                             <label class="block mb-2 text-blue-500" for="c_new_password">Confirm New Password</label>
-                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="c_new_password" value="{{ c_new_password }}">
+                            <input class="p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300 w-[90%]" type="password" name="c_new_password" value="{{ c_new_password }}" onchange="showSubmitButton()">
                         </div>
                     </div>
                 </div>
                 <div class="flex flex-col justify-center items-center mt-5">
-                    <button class="w-[20%] bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded" type="submit">Submit Changes</button>
+                    <button class="w-[20%] bg-blue-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded" type="submit" id="submitButton" style="display: none;">Submit Changes</button>
                     <a class="text-blue-700 hover:text-pink-700 text-sm float-left" href="/">Back to home</a>
                 </div>
             </form>
