everything working now

--- a/templates/register.html
+++ b/templates/register.html
@@ -72,7 +72,7 @@
                     <footer>
                         <a class="text-blue-700 hover:text-pink-700 text-sm float-left" href="/login">Already have an account?</a>
                         {% if msg %}
-                        <p>{{ msg }}</p>
+                        <p class="text-red-500 ml-6">{{ msg }}</p>
                         {% endif %}
                     </footer>
                 </form>
