--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -39,6 +39,7 @@
         }
     </style>
 </head>
+
 <body>
     <section>
         <div class="area h-screen">
@@ -68,7 +69,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <div class="flex  lg:items-center lg:justify-start">
-                <img class="w-[65%]" src="static\images\web-logo1.png" alt="">
+                <img class="w-[65%]" src="static\images\web-logo3.png" alt="">
             </div>
             <div class=" w-full lg:flex hidden justify-end items-center">
                 <ul class="flex gap-12 font-bold items-center">
@@ -124,7 +125,7 @@
         </div>
     </section>
     <section>
-        <div class="flex gap-4 w-full justify-center items-center mt-[15%]">
+        <div class="flex flex-col lg:flex-row gap-4 w-full justify-center items-center mt-[15%]">
             <button id="presentButton"
                 class="bg-white py-12 px-40 text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
                 <h1>I am Present!</h1>
@@ -136,11 +137,11 @@
         </div>
         <div class="flex flex-col items-center justify-center mt-6">
             <!-- Modal toggle -->
-            <p data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
-                class="block text-white hover:text-blue-500 font-medium rounded-lg text-xl px-5 py-2.5 text-center "
+            <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
+                class="block text-black bg-white hover:text-blue-500 font-medium rounded-lg text-xl px-5 py-2.5 text-center "
                 type="button">
                 Custom Attendance?
-            </p>
+            </button>
 
             <!-- Main modal -->
             <div id="authentication-modal" tabindex="-1" aria-hidden="true"
@@ -290,11 +291,13 @@
             </div>
         </div>
     </div>
+    <p id="response" class="text-white text-3xl text-center "></p>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script>
         document.getElementById('presentButton').addEventListener('click', () => makeItRain('😊'));
         document.getElementById('leaveButton').addEventListener('click', () => makeItRain('😢'));
+        let response = '';
 
         function makeItRain(emoji) {
             for (let i = 0; i < 30; i++) {
@@ -325,12 +328,16 @@
                 })
                 .then(data => {
                     if (!data.success) {
-                        alert(data.message); // Display the error message from the server
+                        response = data.message // Display the error message from the server
+                        console.log(response)
+                        document.getElementById('response').innerHTML = response;
                     } else {
                         console.log('Success:', data.message); // Log success message
-                        alert('Attendance marked successfully.'); // Display success message
+                        response = ('Attendance marked successfully.'); // Display success message
                         // Optionally, update UI or disable button after successful attendance marking
                         document.getElementById('presentButton').disabled = true;
+                        console.log(response)
+                        document.getElementById('response').innerHTML = response;
                     }
                 })
                 .catch((error) => {
@@ -355,12 +362,14 @@
                 })
                 .then(data => {
                     if (!data.success) {
-                        alert(data.message); // Display the error message from the server
+                    response = data.message // Display the error message from the server
+                    document.getElementById('response').innerHTML = response;
                     } else {
-                        console.log('Success:', data.message); // Log success message
+                        response = ('Success:', data.message); // Log success message
                         alert('Leave marked successfully.'); // Display success message
                         // Optionally, update UI or disable button after successful leave marking
                         document.getElementById('leaveButton').disabled = true;
+                        document.getElementById('response').innerHTML = response;
                     }
                 })
                 .catch((error) => {
@@ -404,7 +413,8 @@
                     late: late
                 }),
                 success: function (response) {
-                    alert("Response from server: " + JSON.stringify(response));
+                    response = JSON.stringify(response)
+                    console.log(response)
                 },
                 error: function (error) {
                     console.error(error);
@@ -424,4 +434,5 @@
         });
     </script>
 </body>
+
 </html>
