--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -125,13 +125,13 @@
         </div>
     </section>
     <section>
-        <div class="flex flex-col lg:flex-row gap-4 w-full justify-center items-center mt-[15%]">
+        <div class="flex flex-col lg:flex-row gap-4 w-full justify-center items-center lg:mt-[15%] mt-[38%]">
             <button id="presentButton"
-                class="bg-white py-12 px-40 text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
+                class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
                 <h1>I am Present!</h1>
             </button>
             <button id="leaveButton"
-                class="bg-white py-12 px-40 text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
+                class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
                 <h1>Leaving after break</h1>
             </button>
         </div>
@@ -146,7 +146,7 @@
             <!-- Main modal -->
             <div id="authentication-modal" tabindex="-1" aria-hidden="true"
                 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-                <div class="relative p-4 w-[40%] max-h-full">
+                <div class="relative p-4 w-[75%] lg:w-[40%] max-h-full">
                     <!-- Modal content -->
                     <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
                         <!-- Modal header -->
@@ -162,10 +162,10 @@
                             <span class="sr-only">Close modal</span>
                         </button>
                         <div
-                            class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 gap-[2%]">
-                            <div class="flex gap-3">
-                                <form id="attendanceForm" class="flex">
-                                    <div class="border-r-2 pr-2 border-r-indigo-50">
+                            class="flex  items-center justify-between border-b rounded-t dark:border-gray-600 gap-[2%]">
+                            <div class="flex gap-3 ">
+                                <form id="attendanceForm" class="flex lg:flex-row flex-col gap-2 text-center lg:gap-0">
+                                    <div class="lg:border-r-2 pr-2  lg:border-r-indigo-50">
                                         <ul>
                                             <li>
                                                 <div class="flex gap-2 w-[30%]">
@@ -222,7 +222,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="ml-2">
+                                    <div class="lg:ml-2">
                                         <ul>
                                             <li>
                                                 <div class="flex gap-2 w-[20%]">
