--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -64,65 +64,75 @@
                 <li></li>
             </ul>
         </div>
-        <div class="border-2 border-t-0 w-full m-auto flex border-indigo-800 bg-white py-3 px-10">
-            <div class="lg:hidden px-2 flex w-1/3">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="flex  lg:items-center lg:justify-start">
-                <img class="w-[65%]" src="static\images\web-logo3.png" alt="">
-            </div>
-            <div class=" w-full lg:flex hidden justify-end items-center">
-                <ul class="flex gap-12 font-bold items-center">
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/">Home</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/attendance">Attendance</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/stats">Stats</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/todo">Todo</a></li>
-                    <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="">About us</a></li> -->
-                    {% if ausername %}
-                    <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
-                        class="flex text-sm bg-gray-400 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
-                        type="button">
-                        <span class="sr-only">Open user menu</span>
-                        {% if profile_photo %}
-                        <img src="{{ url_for('static', filename='images/profile_uploads/' + profile_photo) }}"
-                            class="rounded-full h-12 w-12 object-cover" alt="Profile Photo" id="profilePhotoPreview">
+        <nav class="bg-white border-gray-200">
+            <div class="max-w-screen-xl flex flex-wrap items-center bg-white justify-between mx-auto p-4">
+                <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
+                    <img src="static/images/web-logo3.png" class="h-8" alt="Flowbite Logo" />
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                </a>
+                <button data-collapse-toggle="navbar-default" type="button"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-default" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15" />
+                    </svg>
+                </button>
+                <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                    <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 items-center border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white">
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/">Home</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/attendance">Attendance</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/stats">Stats</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/todo">Todo</a></li>
+                        <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="">About us</a></li> -->
+                        {% if ausername %}
+                        <button id="dropdownUserAvatarButton" data-dropdown-toggle="dropdownAvatar"
+                            class="flex text-sm bg-gray-400 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                            type="button">
+                            <span class="sr-only">Open user menu</span>
+                            {% if profile_photo %}
+                            <img src="{{ url_for('static', filename='images/profile_uploads/' + profile_photo) }}"
+                                class="rounded-full h-12 w-12 object-cover" alt="Profile Photo" id="profilePhotoPreview">
+                            {% else %}
+                            <div class="w-10 h-10 rounded-full profile-placeholder flex justify-center items-center"
+                                id="profilePhotoPlaceholder">
+                                <p class="mb-1 capitalize text-2xl">{{ username[0] }}</p>
+                            </div>
+                            <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover"
+                                style="display: none;">
+                            {% endif %}
+                        </button>
+                        <!-- Dropdown menu -->
+                        <div id="dropdownAvatar"
+                            class="z-10 hidden  divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                            <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                                <div>{{ausername}}</div>
+                                <div class="font-medium truncate">{{email}}</div>
+                            </div>
+                            <div class="py-2">
+                                <a href="/profile"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Profile</a>
+                                <a href="/logout"
+                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log
+                                    out</a>
+                            </div>
+                        </div>
                         {% else %}
-                        <div class="w-10 h-10 rounded-full profile-placeholder flex justify-center items-center"
-                            id="profilePhotoPlaceholder">
-                            <p class="mb-1 capitalize text-2xl">{{ username[0] }}</p>
-                        </div>
-                        <img id="profilePhotoPreview" class="rounded-full h-48 w-48 object-cover"
-                            style="display: none;">
+                        <li><a id="account"
+                                class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/login">login</a></li>
                         {% endif %}
-                    </button>
-                    <!-- Dropdown menu -->
-                    <div id="dropdownAvatar"
-                        class="z-10 hidden  divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                        <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-                            <div>{{ausername}}</div>
-                            <div class="font-medium truncate">{{email}}</div>
-                        </div>
-                        <div class="py-2">
-                            <a href="/profile"
-                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Profile</a>
-                            <a href="/logout"
-                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log
-                                out</a>
-                        </div>
-                    </div>
-                    {% else %}
-                    <li><a id="account"
-                            class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/login">login</a></li>
-                    {% endif %}
-                </ul>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
     </section>
     <section>
         <div class="flex flex-col lg:flex-row gap-4 w-full justify-center items-center lg:mt-[15%] mt-[38%]">
