--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="flex">
-            <div class="w-[30%] m-auto bg-blue-100 rounded flex flex-col mt-20 p-5 z-10 relative">
+            <div class="xl:w-1/3 lg:w-[60%] md:w-[80%] w-[90%] m-auto bg-blue-100 rounded flex flex-col mt-[40%] lg:mt-20 p-5 z-10 relative">
                 <header class="py-2">
                     <h2 class="text-blue-500 text-3xl text-center font-bold">Register</h2>
                 </header>
