UI shifted to normal

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -88,8 +88,8 @@
                                 href="/attendance">Attendance</a></li>
                         <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                                 href="/stats">Stats</a></li>
-                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                                href="/todo">Todo</a></li>
+                        <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                                href="/todo">Todo</a></li> -->
                         <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                                 href="">About us</a></li> -->
                         {% if ausername %}
