yesterday's UI changes

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -294,8 +294,8 @@
                         </form>
                         <button onclick="calculateAttendance()" class="ml-[35%] w-[20%] bg-blue-500"
                             id="submitButton">submit</button>
+                        <p class="msg"></p>
                         <!-- Modal body -->
-
                     </div>
                 </div>
             </div>
