--- a/templates/stats.html
+++ b/templates/stats.html
@@ -136,11 +136,11 @@
         <div class="bg-white p-6 my-12 w-[90%] md:w-[80%] lg:w-[70%] mx-auto rounded-lg gap-[2%] justify-center">
             <div class="container mx-auto p-4 md:p-8">
                 <div class="bg-white shadow-md rounded-lg p-4 md:p-8 mb-8">
-                    <h2 class="text-lg font-bold mb-4 text-center">attendance till now</h2>
+                    <h2 class="text-lg font-bold mb-4 text-center">Attendance till now</h2>
                     <div id="chart1" class="w-full h-64 md:h-96"></div>
                 </div>
                 <div class="bg-white shadow-md rounded-lg p-4 md:p-8 mb-8">
-                    <h2 class="text-lg font-bold mb-4 text-center">attendance till next unit-test</h2>
+                    <h2 class="text-lg font-bold mb-4 text-center">Attendance till next unit-test</h2>
                     <div id="chart2" class="w-full h-64 md:h-96"></div>
                 </div>
                 <div class="bg-white shadow-md rounded-lg p-4 md:p-8">
