UI major bug fixing, PY code updated with major bug avoided

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -67,7 +67,6 @@
         <div class="max-w-screen-xl flex flex-wrap items-center bg-white justify-between mx-auto p-4">
             <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="static/images/web-logo3.png" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button"
                 class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -87,8 +86,8 @@
                             href="/attendance">Attendance</a></li>
                     <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="/stats">Stats</a></li>
-                    <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
-                            href="/todo">Todo</a></li>
+                    <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                            href="/todo">Todo</a></li> -->
                     <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                             href="">About us</a></li> -->
                     {% if ausername %}
