--- a/templates/change_email.html
+++ b/templates/change_email.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
     <div class="flex justify-center items-center h-screen">
-        <div class="w-1/3 bg-blue-100 rounded p-5">
+        <div class="lg:w-1/3 w-[80%] bg-blue-100 rounded p-5">
             <header class="py-2">
                 <h2 class="text-blue-500 text-3xl text-center font-bold">Change Email</h2>
             </header>
