--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -300,7 +300,7 @@
             </div>
         </div>
     </div>
-    <p id="response" class="text-white text-3xl text-center "></p>
+    <p id="response" class="text-white text-3xl mt-6 text-center "></p>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script>
