--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-gray-100">
-    <div class="area">
+    <div class="area h-screen">
         <ul class="circles h-screen">
             <li></li>
             <li></li>
@@ -32,7 +32,7 @@
         </ul>
     </div>
     <div class="flex justify-center items-center h-screen">
-        <div class="w-1/3 bg-blue-100 rounded p-5">
+        <div class="lg:w-1/3 w-[80%] bg-blue-100 rounded p-5">
             <header class="py-2">
                 <h2 class="text-blue-500 text-3xl text-center font-bold">Reset Password</h2>
             </header>
