Portal is here! (might have to change if server restarts evertime)

--- a/templates/XA.html
+++ b/templates/XA.html
@@ -60,6 +60,16 @@
                 </form>
             </div>
         </div>
+        <div class="m-auto flex flex-col lg:flex-row justify-center items-center gap-6 pt-12">
+            <button id="UnitTestBtn" onclick="toggleUnitTest()"
+            class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
+            <h1>Open Unit test marks entering Portal</h1>
+            </button>
+            <button id="UnitTestBtn" onclick="toggleUnitTest()"
+            class="bg-white py-12  lg:w-[30%] w-[70%] text-xl hover:bg-blue-500 hover:text-white ease-in-out rounded-lg">
+            <h1>disable Unit test marks entering Portal</h1>
+            </button>
+        </div>
     </section>
 </body>
 </html>
