admin portal is now working

--- a/templates/XAB.html
+++ b/templates/XAB.html
@@ -30,12 +30,12 @@
             <li></li>
         </ul>
     </div>
-    <div>
-        <button onclick="sendResponse()" class="w-[40%] m-auto">
-            Press Here
+    <div class="w-full flex items-center gap-2 pt-12">
+        <button onclick="sendResponse2()" class="p-12 m-auto bg-white hover:bg-blue-500">
+            Open Portal
         </button>
-        <button onclick="sendResponse2()" class="w-[40%] m-auto">
-            Press Here for Response 2
+        <button onclick="sendResponse()" class="p-12 m-auto bg-white hover:bg-blue-500">
+            Close Portal
         </button>
     </div>
     <script>
