unit portal now works with admin panel

--- a/templates/unit.html
+++ b/templates/unit.html
@@ -30,10 +30,8 @@
         </ul>
     </div>
     <div>
-        {% if button == 1 %}
-            <p>open</p>
-        {% else %}
-            <p>close</p>
+        {% if portal %}
+            <div id="portal" class="text-white text-center">Portal is now open!</div>
         {% endif %}
     </div>
 </body>
