--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,8 @@
                                 href="/attendance">Attendance</a></li>
                         <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                 nb                href="/stats">Stats</a></li>
+                        <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
+                nb                href="/unit_test">Unit test</a></li>
                         <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
                                 href="/todo">Todo</a></li> -->
                         <!-- <li><a class="hover:text-gray-500 ease-in-out text-black duration-300 no-underline text-xl"
